--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "pcbuddy-frontend"]
 	path = pcbuddy-frontend
 	url = https://github.com/MohammadFakih02/pcbuddy-frontend
+[submodule "pcbuddy-mobile"]
+	path = pcbuddy-mobile
+	url = https://github.com/MohammadFakih02/pcbuddy-mobile
